--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -888,3 +888,6 @@ ol.popular-tags li a {
   background-color: #fff;
   border-color: #e3e3e3;
 }
+.form-control:focus {
+  border-color: #92d43e;
+}
