--- a/views/customer_group_list.html
+++ b/views/customer_group_list.html
@@ -81,11 +81,10 @@
     <td>{{id}}</td>
     <td>{{name}}</td>
     <td>{{members}}</td>
-    <td>{{description}}</td>
+    <td style="word-break:break-all;word-wrap:break-word">{{description}}</td>
     <td>{{editat}}</td>
     <td>
       <a href="/customer/group/edit/{{id}}" class="btn btn-default btn-sm" index={{index}} operation="edit"><%= i('html.button.common.edit') %><!-- 編集--></a>
-      <a href="/customer/group" class="btn btn-default btn-sm" index={{index}} operation="delete"><%= i('html.button.common.delete') %><!-- 削除--></a>
     </td>
   </tr>
 </script>
