--- a/views/customer_notice.html
+++ b/views/customer_notice.html
@@ -56,8 +56,8 @@
             <tr>
               <th>#</th>
               <th><%= i('html.label.notice.recipient') %><!-- 宛先--></th>
-              <th width="20%"><%= i('html.label.notice.title') %><!-- タイトル--></th>
-              <th width="50%"><%= i('html.label.notice.message') %><!-- メッセージ--></th>
+              <th><%= i('html.label.notice.title') %><!-- タイトル--></th>
+              <th style="word-break:break-all;word-wrap:break-word"><%= i('html.label.notice.message') %><!-- メッセージ--></th>
               <th><%= i('html.label.notice.sendby') %><!-- 送信者--></th>
               <th><%= i('html.label.notice.sendat') %><!-- 送信日--></th>
             </tr>
