--- a/public/stylesheets/contents.less
+++ b/public/stylesheets/contents.less
@@ -127,7 +127,7 @@
 }
 
 #widget_panel {
-  border: solid 1px #d3d3d3;
+//  border: solid 1px #d3d3d3;
   float: left;
   height: 500px;
   width: 300px;
