--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -413,9 +413,9 @@
         <div class="modal-header">
           <h3><%= i('html.label.layout.contents.title') %><!-- ネタ選択--></h3>
         </div>
-        <div class="modal-body" style="padding-bottom: 0px">
+        <div class="modal-body" style="padding-bottom: 0px;max-height: 450px;overflow-y: auto">
           <table class="table table-hover" style="margin-bottom: 0px">
-            <thead>
+            <thead >
             <tr>
               <th>#</th>
               <th><%= i('html.label.layout.contents.sheet') %><!-- 表紙--></th>
@@ -427,7 +427,7 @@
               <th><%= i('html.label.layout.contents.select') %><!-- 選択--></th>
             </tr>
             </thead>
-            <tbody id="synthetic_list"></tbody>
+            <tbody id="synthetic_list" ></tbody>
           </table>
         </div>
         <div class="modal-footer" style="margin-top: 0px">
