--- a/views/admin_company_update.html
+++ b/views/admin_company_update.html
@@ -47,21 +47,21 @@
             <label class="col-lg-2 control-label"><%= i('html.label.company.type') %><!--顧客タイプ --></label>
             <div class="col-lg-8">
               <div class="btn-group" value="1" id="inputCompanyType">
-                <button type="button" class="btn btn-sm btn-default" value="0"><%= i('html.label.company.type.demo') %><!--体験顧客 --></button>
+                <button type="button" class="btn btn-sm btn-default" value="0"><%= i('html.label.company.type.demo') %><!--提案客户 --></button>
                 <button type="button" class="btn btn-sm btn-default" value="1"><%= i('html.label.company.type.contract') %></button>
               </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="inputNameEn" class="col-lg-2 control-label"><%= i('html.label.company.name1') %><!--会社名(英語) --></label>
-            <div class="col-lg-8">
-              <input type="text" class="form-control" id="inputNameEn" placeholder="<%= i('html.label.company.name1') %>" maxlength="30">
             </div>
           </div>
           <div class="form-group">
             <label for="inputNameJp" class="col-lg-2 control-label"><%= i('html.label.company.name2') %><!--会社名(かな) --></label>
             <div class="col-lg-8">
               <input type="text" class="form-control" id="inputNameJp" placeholder="<%= i('html.label.company.name2') %>" maxlength="30">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputNameEn" class="col-lg-2 control-label"><%= i('html.label.company.name1') %><!--会社名(英語) --></label>
+            <div class="col-lg-8">
+              <input type="text" class="form-control" id="inputNameEn" placeholder="<%= i('html.label.company.name1') %>" maxlength="30">
             </div>
           </div>
           <div class="form-group">
@@ -73,7 +73,7 @@
           <div class="form-group">
             <label for="inputTel" class="col-lg-2 control-label"><%= i('html.label.company.tel') %><!--電話番号 --></label>
             <div class="col-lg-8">
-              <input type="tel" class="form-control" id="inputTel" placeholder="<%= i('html.label.company.tel') %>" maxlength="20">
+              <input type="tel" class="form-control" id="inputTel" placeholder="<%= i('html.label.company.tel') %>" maxlength="30">
             </div>
           </div>
           <div class="form-group">
