--- a/views/admin_company_list.html
+++ b/views/admin_company_list.html
@@ -56,7 +56,8 @@
             <th>#</th>
             <th><%= i('html.label.company.type') %><!--顧客タイプ --></th>
             <th><%= i('html.label.company.id') %><!--会社ID --></th>
-            <th><%= i('html.label.company.name') %><!--会社名 --></th>
+            <th><%= i('html.label.company.name') %><!--会社名(英語) --></th>
+            <th><%= i('html.label.company.kana') %><!--会社名(かな) --></th>
             <th><%= i('html.label.company.address') %><!--会社住所 --></th>
             <th><%= i('html.label.company.tel') %><!--電話番号 --></th>
             <th><%= i('html.label.company.adminid') %><!--管理者ID --></th>
@@ -88,6 +89,7 @@
   <$ } $>
   <td>{{_id}}</td>
   <td>{{name}}</td>
+  <td>{{kana}}</td>
   <td>{{address}}</td>
   <td>{{tel}}</td>
   <td>{{mail}}</td>
