--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -413,7 +413,7 @@
         <div class="modal-header">
           <h3><%= i('html.label.layout.contents.title') %><!-- ネタ選択--></h3>
         </div>
-        <div class="modal-body" style="padding-bottom: 0px;max-height: 450px;overflow-y: auto">
+        <div class="modal-body" style="padding-bottom: 0px;">
           <table class="table table-hover" style="margin-bottom: 0px">
             <thead >
             <tr>
@@ -427,8 +427,12 @@
               <th><%= i('html.label.layout.contents.select') %><!-- 選択--></th>
             </tr>
             </thead>
-            <tbody id="synthetic_list" ></tbody>
           </table>
+          <div style="max-height: 335px;overflow-y: auto">
+            <table class="table table-hover" style="margin-bottom: 0px">
+                  <tbody id="synthetic_list"></tbody>
+            </table>
+          </div>
         </div>
         <div class="modal-footer" style="margin-top: 0px">
           <button class="btn btn-default btn-sm" id="selectedContents"><%= i('html.button.layout.contents.select') %><!-- 選択--></button>
