--- a/views/common/sidebar.html
+++ b/views/common/sidebar.html
@@ -116,13 +116,11 @@
             <i class="icon-briefcase"></i>&nbsp;<%= i('html.label.sidebar.company.manager.customer') %>
           </a>
         </li>
-        <!--
         <li>
-          <a href="/admin/operated" class="dropdown-toggle">
-            <i class="icon-truck"></i>&nbsp;運行情報
+          <a href="#" class="dropdown-toggle">
+            <i class="icon-truck"></i>&nbsp;<%= i('html.label.sidebar.company.manager.operated')%> <!--運行情報 -->
           </a>
         </li>
-        -->
       </ul>
     </li>
     <% }%>
