公司编集画面增加path字段

--- a/views/admin_company_list.html
+++ b/views/admin_company_list.html
@@ -55,7 +55,7 @@
           <tr>
             <th>#</th>
             <th><%= i('html.label.company.type') %><!--顧客タイプ --></th>
-            <th><%= i('html.label.company.id') %><!--会社ID --></th>
+            <th><%= i('html.label.company.path') %><!--会社ID --></th>
             <th><%= i('html.label.company.name') %><!--会社名(英語) --></th>
             <th><%= i('html.label.company.kana') %><!--会社名(かな) --></th>
             <th><%= i('html.label.company.address') %><!--会社住所 --></th>
