--- a/views/admin_company_update.html
+++ b/views/admin_company_update.html
@@ -65,6 +65,12 @@
             </div>
           </div>
           <div class="form-group">
+            <label for="inputComPath" class="col-lg-2 control-label"><%= i('html.label.company.path') %><!--会社ID --></label>
+            <div class="col-lg-8">
+              <input type="text" class="form-control" id="inputComPath" placeholder="<%= i('html.label.company.path') %>" maxlength="20">
+            </div>
+          </div>
+          <div class="form-group">
             <label for="inputAddress" class="col-lg-2 control-label"><%= i('html.label.company.address') %><!--会社住所 --></label>
             <div class="col-lg-8">
               <input type="text" class="form-control" id="inputAddress" placeholder="<%= i('html.label.company.address') %>" maxlength="50">
