--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -381,12 +381,12 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 .tableheader {
   //background-color: #E6E6E6;
   color: #000000;
-  font-size: 24px;
+//  font-size: 24px;
   padding-top: 5px;
   padding-right: 5px;
   margin-bottom: 1px;
   border-bottom: 5px solid #92d43e;
-  font-family:Georgia;
+//  font-family:Georgia;
 }
 h4 {
   font-size: 24px;
