--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -891,3 +891,29 @@ ol.popular-tags li a {
 .form-control:focus {
   border-color: #92d43e;
 }
+.alertify-button-cancel, .alertify-button-cancel:hover, .alertify-button-cancel:focus, .alertify-button-cancel:active {
+  background-color: #92d43e;
+}
+.alertify-button, .alertify-button:hover, .alertify-button:focus, .alertify-button:active {
+  border-radius: 0px;
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0), 0 1px 2px rgba(0, 0, 0, 0);
+}
+.alertify-button-ok, .alertify-button-ok:hover, .alertify-button-ok:focus, .alertify-button-ok:active {
+  text-shadow: 0 -1px 0 rgba(0, 0, 0,0);
+  background-color: #92d43e;
+  border: 1px solid #92d43e;
+  border-color: #92d43e #92d43e #92d43e;
+}
+.alertify-button-cancel, .alertify-button-cancel:hover, .alertify-button-cancel:focus, .alertify-button-cancel:active {
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0);
+  background-color: #92d43e;
+  background-image: -webkit-linear-gradient(top, #92d43e, #92d43e);
+  background-image: -moz-linear-gradient(top, #92d43e, #92d43e);
+  background-image: -ms-linear-gradient(top, #92d43e, #92d43e);
+  background-image: -o-linear-gradient(top, #92d43e, #92d43e);
+  background-image: linear-gradient(top, #92d43e, #92d43e);
+  color: #FFF;
+}
+.alertify-dialog {
+  border-radius: 0px;
+}
