--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,7 @@
   <% include common/required.html %>
 
   <link rel='stylesheet' href='/stylesheets/top.css'/>
+  <script type='text/javascript' src='/javascripts/login/browser.js'></script>
   <script type='text/javascript' src='/javascripts/login/login.js'></script>
 
 </head>
