--- a/public/stylesheets/yukari.css
+++ b/public/stylesheets/yukari.css
@@ -587,7 +587,6 @@ ol.popular-tags li a {
   width: 60px;
   padding-left: 5px;
   text-align: center;
-
 }
 .wsname {
   width: 200px;
@@ -595,7 +594,7 @@ ol.popular-tags li a {
   text-align: center;
 }
 .wstype {
-  width: 100px;
+  width: 60px;
   padding-right: 5px;
   text-align: center;
 }
@@ -604,13 +603,19 @@ ol.popular-tags li a {
   padding-right: 5px;
   text-align: center;
 }
+.wsopen {
+  width: 65px;
+  padding-right: 10px;
+  padding-left: 10px;
+  text-align: center;
+}
 .wsoper {
-  width: 40px;
+  width: 45px;
   text-align: center;
 }
 .dropdown-menu {
   float: left;
-  min-width: 100px;
+  min-width: 350px;
   padding: 0px 0;
   margin: 0px 0 0;
 }
