--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -597,30 +597,41 @@ ol.popular-tags li a {
 .wsbackcolor ul li div{
   margin-top: 0px;
 }
-.wsicon{
-  width:8%;
+.wsicon {
+  width: 60px;
   padding-left: 5px;
-  padding-right: 5px;
+  text-align: center;
+
 }
-.wsname{
-  width:27%;
+.wsname {
+  width: 200px;
   padding-right: 5px;
+  text-align: center;
 }
-.wstype{
-  width:10%;
+.wstype {
+  width: 60px;
   padding-right: 5px;
+  text-align: center;
 }
-.wsurl{
-  width:50%;
+.wsurl {
+  width: 400px;
   padding-right: 5px;
+  text-align: center;
 }
-.wsoper{
-  width:3%;
-//  padding-right: 5px;
+.wsopen {
+  width: 65px;
+  padding-right: 10px;
+  padding-left: 10px;
+  text-align: center;
+}
+
+.wsoper {
+  width: 45px;
+  text-align: center;
 }
 .dropdown-menu {
   float: left;
-  min-width: 100px;
+  min-width: 350px;
   padding: 0px 0;
   margin: 0px 0 0;
 }
