--- a/views/login.html
+++ b/views/login.html
@@ -24,21 +24,21 @@
               <span class="input-group-addon muted">
                 <i class="icon-user"></i>
               </span>
-            <input type="text" class="form-control" placeholder="Company Id" id="path" name="path" value="">
+            <input type="text" class="form-control" placeholder="Company Id" id="path" name="path" value="r2space">
           </div>
         </div>
         <!-- 用户名 -->
         <div class="form-group">
           <div class="input-group">
             <span class="input-group-addon"><i class="icon-envelope"></i></span>
-            <input type="text" class="form-control" placeholder="e-mail" id="name" name="name" value="l_li@dreamarts.co.jp">
+            <input type="text" class="form-control" placeholder="e-mail" id="name" name="name" value="1@dreamarts.co.jp">
           </div>
         </div>
         <!-- 密码 -->
         <div class="form-group">
           <div class="input-group">
             <span class="input-group-addon "><i class="icon-key"></i></span>
-            <input type="password" class="form-control" placeholder="password" id="pass" name="pass" value="l_li">
+            <input type="password" class="form-control" placeholder="password" id="pass" name="pass" value="ranbow">
           </div>
         </div>
         <div class="form-group">
