--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -94,6 +94,14 @@
                 </div>
               </div>
             </div>
+            <div class="form-group">
+              <label for="keywordsText" class="col-lg-3 control-label"><%= i('html.label.layout.viewer') %><!-- 公開先 --></label>
+              <div class="col-lg-7">
+                <div id="textBoxViewer" class="incrementBox">
+                  <input id="viewerText" scope="1" placeholder="<%= i('html.input.layout.viewer') %>" />
+                </div>
+              </div>
+            </div>
           </form>
         </div>
       </div>
