--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -591,7 +591,7 @@ ol.popular-tags li a {
   height: 45px;
   border-right-width: 0px;
   border-left-width: 0px;
-  border-top-width: 0px;
+  border-top-width: 1px;
   border-bottom-width: 0px;
 }
 .wsbackcolor ul li div{
@@ -631,9 +631,12 @@ ol.popular-tags li a {
 }
 .dropdown-menu {
   float: left;
-  min-width: 350px;
+  min-width: 200px;
   padding: 0px 0;
   margin: 0px 0 0;
+}
+.dropdown-menu > li >  i {
+  padding: 5px 5px 5px 5px;
 }
 /**workstation end*/
 
