用户contetns作成者权限追加

--- a/views/common/sidebar.html
+++ b/views/common/sidebar.html
@@ -107,7 +107,7 @@
 
     <% if (user.type == 3 || user.type == 2) {%>
     <li>
-      <a href="/admin/company" class="dropdown-toggle">
+      <a href="#" class="dropdown-toggle">
         <span class="menu-text"><%= i('html.label.sidebar.company.manager') %></span>
       </a>
       <ul class="submenu" style="display: block;">
