允许多个用户选择

--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -640,10 +640,11 @@ ol.popular-tags li a {
 
 
 /* 用户搜索结果 */
-#_findresult {
+.findresult {
   top: 0px;
   left: 0px;
   position: absolute;
+  z-index: 2000;
 
   background-color: #fff;
   display: none;
