统一js文件命名

--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -4,7 +4,7 @@
   <title><%= title %></title>
   <% include common/required.html %>
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
-  <script type="text/javascript" src="/javascripts/layout.js"></script>
+  <script type="text/javascript" src="/javascripts/content_layout_add.js"></script>
   <script type="text/javascript" src="/javascripts/common.user.view.js"></script>
   <style type="text/css">
     table.layout {
