--- a/views/content_synthetic.html
+++ b/views/content_synthetic.html
@@ -4,7 +4,7 @@
   <title><%= title %></title>
   <% include common/required.html %>
 
-  <script type="text/javascript" src="/javascripts/synthetic.js"></script>
+  <script type="text/javascript" src="/javascripts/content_synthetic.js"></script>
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
 
 </head>
