--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -4,7 +4,7 @@
   <title><%= title %></title>
   <% include common/required.html %>
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
-  <script type="text/javascript" src="/javascripts/layoutlist.js"></script>
+  <script type="text/javascript" src="/javascripts/content_layout_list.js"></script>
   <script type="text/javascript" src="/javascripts/common.user.view.js"></script>
 </head>
 <body>
